--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project-Euler)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project-Euler main.cpp Problem1/Problem1.cpp Problem1/Problem1.h)
+add_executable(Project-Euler main.cpp Problem1/Problem1.cpp Problem1/Problem1.h Problem2/Problem2.cpp Problem2/Problem2.h)
