--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_executable(Project-Euler main.cpp
         Problem1/Problem1.cpp Problem1/Problem1.h
         Problem2/Problem2.cpp Problem2/Problem2.h
         Problem3/Problem3.cpp Problem3/Problem3.h
-        Problem4/Problem4.cpp Problem4/Problem4.h)
+        Problem4/Problem4.cpp Problem4/Problem4.h
+        Problem5/Problem5.cpp Problem5/Problem5.h)
